HTML 인라인 텍스트 #240123

--- a/1. HTML/2. Content tag/2. list tag.html
+++ b/1. HTML/2. Content tag/2. list tag.html
@@ -16,14 +16,16 @@
     <h2>올해 목표</h2>
     <ul><!--unordered list-->
       <li>취업</li>
-      <li>2종 소형 면허 취득 후 스쿠터 여행</li>
       <ul>
-        <li>크림 치즈</li>
-        <li>체다 치즈</li>
-        <li>모짜렐라 치즈</li>
+        <li>프로젝트 포트폴리오</li>
+        <li>면접 준비</li>
+        <li>프로젝트 발표</li>
       </ul>
-      <li>양파</li>
-      <li>마늘</li>
+      <li>2종 소형 면허 취득 후 스쿠터 여행</li>
+      <li>릴스 찍기</li>
+      <li>인스타 팔로워 100명</li>
+      <li>HSK 5급</li>
+      <li>교정반 4개월 이상</li>
     </ul>
   </section>
   <!-- section: 문서의 일반적인 영역, 의미 없는 영역을 표시-->
