이미지 커밋

--- a/index.html
+++ b/index.html
@@ -76,7 +76,19 @@
     <ul>
         <li>Americano</li>
         <li>Latte</li>
+        <li></li>
     </ul>
+
+    <ol>
+        <li>자유형 freestyle ziyoushi</li>
+        <li>배영 back-stroke yangyong</li>
+        <li>평영 breast-stroke wayong</li>
+        <li>접영 butterfly-stroke dieyong</li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ol>
 
 </body>
 
