--- a/2. CSS/5. box model/2. box attribute/10. myhtml.html
+++ b/2. CSS/5. box model/2. box attribute/10. myhtml.html
@@ -56,6 +56,9 @@
         <li>가브리엘 천사상을 찍습니다. 눈을 합성합니다.</li>
         <li>잭 스타우버 노래를 삽입합니다.</li>
         <li>입을 찢는 동작을 취합니다.</li>
+        <li>잭 스타우버의 폰트를 찾아 넣습니다.</li>
+        <li>한국의 백룸을 찾습니다</li>
+        <li>커피가 돌아가는 gif 파일을 만듭니다</li>
       </ol>
     </article>
     
