--- a/2. CSS/7. Background/3. practice.html
+++ b/2. CSS/7. Background/3. practice.html
@@ -5,15 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-      <!-- reset css -->
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
+  <!-- reset css -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
   <style>
     @font-face {
-    font-family: 'gulim';
-    src: url('./font/gulim.ttc');
-  }
+      font-family: 'gulim';
+      src: url('./font/gulim.ttc');
+    }
+
     section {
       width: 60%;
+      margin-left: 20px;
     }
 
     h1 {
@@ -28,6 +30,7 @@
       background-image: url(./images/bg_bul.gif);
       background-repeat: no-repeat;
     }
+
     .sub-title {
       margin: 15px 25px;
       font: bold 20px / 1.2em serif;
@@ -43,7 +46,6 @@
       background-position: center bottom;
       font-family: "gulim", sans-serif;
     }
-
   </style>
 
 </head>
@@ -64,17 +66,20 @@
     </div>
     <div class="food">
       <h2 class="sub-title">간식과 야참</h2>
+        <P>
+        가공식품으로 구성된 간식이면 먹지 않는 것보다 더 좋지 않다.
+        몸 안의 좋은 성분과 나쁜 성분의 구분할 수 없게 된다.
+        건강을 생각하여 과일 등의 자연식품으로 차린 야참은 과식만 하지 않는다면 먹어도 좋다.
+        </p>
+    </div>
+    </div>
+    <div class="food">
+      <h2 class="sub-title">보양식과 약</h2>
       <p>
-        가공식품으로 구성된 간식이면...  
+        보양식은 일반식사나 간식을 면밀히 검토해야 할 경우가 덜하지만 약을 복용중이라면
+        평소 식사나 간식에 주의해야 한다. 음식도 궁합이 있는데 약의 작용은 더욱 심하기 때문이다.
       </p>
     </div>
-  </div>
-  <div class="food">
-    <h2 class="sub-title">보양식과 약</h2>
-    <p>
-      보양식은 일반식사나 간식을...
-    </p>
-  </div>
     </div>
   </section>
 
