--- a/index.html
+++ b/index.html
@@ -90,6 +90,33 @@
         <li></li>
     </ol>
 
+    <ol>
+        <li>VHS 카메라로 촬영합니다. (비디오 촬영) </li>
+        <li>눈두덩이에 검은색으로 낙서합니다. </li>
+        <li>머그컵을 찍습니다. </li>
+        <li>가브리엘 천사상을 찍습니다. 눈을 합성합니다.</li>
+        <li>잭 스타우버 노래를 삽입합니다.</li>
+        <li>입을 찢는 동작을 취합니다.</li>
+        <li>잭 스타우버의 폰트를 찾아 넣습니다.</li>
+        <li>한국의 백룸을 찾습니다</li>
+        <li>커피가 돌아가는 gif 파일을 만듭니다</li>
+      </ol>
+
+      <ol>
+        <li>2021.12 말 WTS</li>
+        <li>2023.04 말 Awesome</li>
+        <li>2023.05 초 YNA</li>
+        <li>2023.08 초 XJH</li>
+        <li>2023.12 말 HCL</li>
+        <li>2024.01 말 Dance</li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+
 </body>
 
 </html>
